--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-27 13:34+0100\n"
+"POT-Creation-Date: 2022-05-29 11:43+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -197,9 +197,9 @@ msgstr "Удалить задачу"
 msgid "Show"
 msgstr "Показать"
 
-#: task_manager/users/constants.py:8 templates/base.html:50
-msgid "Sign up"
-msgstr "Регистрация"
+#: task_manager/users/constants.py:8
+msgid "Register"
+msgstr "Зарегистрировать"
 
 #: task_manager/users/constants.py:25
 msgid "You do not have a permission to change another user"
@@ -253,6 +253,10 @@ msgstr "Менеджер задач"
 #: templates/base.html:43
 msgid "Log out"
 msgstr "Выход"
+
+#: templates/base.html:50
+msgid "Sign up"
+msgstr "Регистрация"
 
 #: templates/delete.html:13
 msgid "Are you sure you want to delete"
